force-app/main/default/objects/COGS_Category__c/COGS_Category__c.object-meta.xml
<CustomObject>
    <label>COGS Category</label>
    <nameField>
        <label>COGS Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COGS Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>