force-app/main/default/objects/COGS_Category__c/fields/Time_Factor__c.field-meta.xml
<CustomField>
    <fullName>Time_Factor__c</fullName>
    <description>Factor that defines predicted COGS reduction over time</description>
    <inlineHelpText>Factor that defines predicted COGS reduction over time</inlineHelpText>
    <label>Time Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>