force-app/main/default/objects/COGS_Category__c/fields/Volume_Factor__c.field-meta.xml
<CustomField>
    <fullName>Volume_Factor__c</fullName>
    <label>Volume Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>